<resources>
    <string name="app_name">CST338-P2-Movie_Schmovies</string>
    <string name="usernameInputLabel">Enter your Username: </string>
    <string name="passwordInputLabel">Enter your Password: </string>
    <string name="LogInLabel">Log In</string>
    <string name="SubmitButton">Submit!</string>
    <string name="SignUpLabel">Sign Up</string>
    <string name="GuestLabel">Continue as Guest?</string>
    <string name="log_in">Log in</string>
    <string name="no_username">No username</string>
    <string name="title">Welcome to Movie Schmovies</string>
    <string name="title_activity_basic_movie_view">Basic_Movie_View</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="re_enter_password">Re-Enter Password:</string>
    <string name="movie_schmovies_Title">Welcome to Movie Schmovies</string>
    <string name="enter_admin_username">Enter Admin Username</string>
    <string name="admin_login_string">Admin Login</string>
    <string name="enter_admin_password">Enter Admin Password</string>
    <string name="logout">logout</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="title_here">Title here</string>
    <string name="synopsis">Synopsis</string>
    <string name="titleHolder">Title</string>
    <string name="textHolder">Text</string>
    <string name="enter_movie_title">Enter Movie Title:</string>
    <string name="add_image_url">Add Image URL:</string>
    <string name="enter_suggested_age_rating">Enter Suggested Age Rating:</string>
    <string name="times_input_example">Ex.: Cinemark Monterey 13; 2:30PM 3:45PM 6:00PM, 9:55PK</string>
    <string name="times_input_explanation">Enter times movie is playing and theater (Theater; time1 time2 time3, ...) format</string>
</resources>